--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,13 @@ body {
     font-family:'Fredoka One' 
 }
 h1 {
+    padding: 40px 0px 50px;
     color: #E53170;
 }
 h2,h3{
     color: white;
+}
+/* MAIN */
+.titolo{
+    text-align: center;   
 }
