--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 /* TIPOGRAPHY */
 body {
-    font-family:'Fredoka One' 
+    font-family:'Fredoka One' ;
 }
 h1 {
     padding: 40px 0px 50px;
@@ -24,8 +24,36 @@ h1 {
 }
 h2,h3{
     color: white;
+    font-size:medium;
+}
+a,h3{
+    font-size:small;
+}
+a{
+    color: #4dccf2;
+    text-decoration: none;
 }
 /* MAIN */
+/* TITOLO */
 .titolo{
     text-align: center;   
+}
+/* CARDS */
+.card {
+    width: calc(33.33% - 30px);
+    background-color: black;
+    display: inline-block;
+    margin: 50px 15px 0px 0px;
+}
+.foto {
+    float: left;
+    width: 30%;
+    height: 100%;
+}
+.info{
+    float: left;
+    padding: 15px 15px;
+}
+h2,h3{
+    padding-bottom: 10px;
 }
