--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,11 @@ a{
     text-align: center;   
 }
 /* CARDS */
-.card {
+.card{
     width: calc(33.33% - 30px);
     background-color: black;
     display: inline-block;
-    margin: 50px 15px 0px 0px;
+    margin: 50px 30px 0px 0px;
 }
 .foto {
     float: left;
@@ -56,4 +56,7 @@ a{
 }
 h2,h3{
     padding-bottom: 10px;
+}
+.rowend{
+    margin: 0px;
 }
