--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 /* RESET */
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 /* COMMON */
+
 .clearfix::after {
     content: '';
     display: block;
@@ -15,12 +17,15 @@
     margin: auto;
 }
 /* TIPOGRAPHY */
+
 body {
-    font-family:'Fredoka One' ;
+    font-family: 'Fredoka', sans-serif
 }
 h1 {
-    padding: 40px 0px 50px;
+    margin-bottom: 40px;
     color: #E53170;
+    font-weight: 700;
+    font-size: 38px;
 }
 h2,h3{
     color: white;
@@ -29,34 +34,38 @@ h2,h3{
 a,h3{
     font-size:small;
 }
-a{
+.info > a{
     color: #4dccf2;
     text-decoration: none;
 }
 /* MAIN */
+
 /* TITOLO */
+
 .titolo{
-    text-align: center;   
+    text-align: center; 
+    padding: 40px 0px 40px;  
 }
 /* CARDS */
+
 .card{
     width: calc(33.33% - 30px);
     background-color: black;
-    display: inline-block;
-    margin: 50px 30px 0px 0px;
+    margin: 15px; 
+    float: left;
+    box-shadow: 0px 0px 10px 5px rgb(200, 200, 200);      
 }
 .foto {
     float: left;
-    width: 30%;
+    width: 100px;
     height: 100%;
 }
 .info{
     float: left;
     padding: 15px 15px;
+    width: calc(100%-100px);
+    max-height: 100px;
 }
-h2,h3{
+.info > h2,h3{
     padding-bottom: 10px;
-}
-.rowend{
-    margin: 0px;
 }
